fixed spacing

--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -10,7 +10,7 @@
 .contact-box {
     display: block;
     margin: 0px 10%;
-    background-color: rgb(143, 102, 84);
+    background-color: rgb(163, 114, 92);
     padding: 10px;
     border: solid white 1.5px;
     border-radius: 10px;
