--- a/src/Components/SideBar/SideBar.css
+++ b/src/Components/SideBar/SideBar.css
@@ -4,7 +4,7 @@
     align-items: center;
     padding: 10px;
     border-radius: 10px;
-    margin: 2.5%;
+    margin: 5.5%;
 }
 
 .sidebar-title {
@@ -20,6 +20,6 @@
 }
 
 .side-text {
-    margin-bottom: -5px;
+    margin-bottom: -2.5px;
     font-size: 15pt;
 }
